# python-webdriver

./: .gitignore  README.md  pyproject.toml
python_webdriver/: functions.py
python_webdriver/driver/: chrome.py  element.py  exceptions.py
python_webdriver/utils/: functions.py
