[project]
name = "python-webdriver"
version = "0.1.0"
description = ""
authors = [
    {name = "AtylaDaSilva",email = "atylamendes97@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "selenium (>=4.44.0,<5.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
